--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,3 +11,18 @@ footer {
     font-size: 23px;
     font-weight: 700;
 }
+@media only screen and (max-width: 1100px) {
+    footer {
+        position: relative;
+        height: auto;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0.51) 0%, rgba(171, 227, 196, 0.6) 100%);
+    }
+    .content-footer {
+        width: 100%;
+        padding: 20px 20px 100px 20px ;
+    }
+    .content-footer h2 {
+        font-size: 23px;
+        font-weight: 700;
+    }
+}
