--- a/src/components/Form/Forms.css
+++ b/src/components/Form/Forms.css
@@ -75,3 +75,46 @@ line-height: 22px;
     background: linear-gradient(180deg, rgba(171, 227, 196, 0.18) 0%, rgba(180, 143, 245, 0.18) 100%);
     border-radius: 20px;
 }
+@media only screen and (max-width: 1100px) {
+    .form-container {
+        padding: 50px 0;
+        width: 100%;
+    }
+    .container-links {
+        width: 100%;
+        height: auto;
+        padding: 20px 0;
+        background: linear-gradient(180deg, rgba(171, 227, 196, 0.18) 0%, rgba(180, 143, 245, 0.18) 100%);
+        border-radius: 20px;
+    }
+    .input-normal {
+        padding: 0 20px;
+        width: auto;
+        height: 44.5px;
+        background: rgba(171, 227, 196, 0.18);
+        border-radius: 20px;
+    }
+    .textarea {
+        padding: 0 20px;
+        width: auto;
+        height: 267.35px;
+        background: rgba(171, 227, 196, 0.18);
+        border-radius: 20px;
+    }
+    .submit {
+        width: auto;
+        margin: 40px auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 12px 84px;
+        gap: 10px;
+        border: 3px solid #ABE3C4;
+        border-radius: 30px;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 22px;
+    }
+}
