--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -101,7 +101,7 @@
     .presentation button {
         margin: 40px auto;
         font-family: 'Figtree', sans-serif;
-        width: 80%;
+        width: 100%;
         height: 48px;
         background: #B48FF5;
         border-radius: 30px;
@@ -110,5 +110,47 @@
         font-size: 20px;
         text-align: center;
         color: #FAFAFA;
-        }
+    }
+    .header-inicio {
+        z-index: 10;
+        height: 100px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .container-inicio ul {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center; 
+        padding: 0;
+    }
+    .container-inicio li {
+        list-style: none;
+        font-family: 'Inter';
+        font-style: normal;
+        padding: 0 10px;
+    }
+    .link-l {
+        border-right: 2px solid;
+        border-left: 2px solid;
+    }
+    .active-Link {
+        font-weight: 600;
+        font-size: 15px;
+        line-height: 19px;
+        text-decoration: none;
+        color: black;
+        font-family: 'Figtree', sans-serif;
+        border-bottom: 2px solid;
+    }
+    .logo {
+        padding: 20px 0;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 44px;
+    }
 }
