--- a/src/components/Inicio/OurValues/OurValues.css
+++ b/src/components/Inicio/OurValues/OurValues.css
@@ -1,6 +1,6 @@
 .our-Values {
     background-color: #FAFAFA;
-    padding: 0 10%;
+    padding: 100px 10% 50px 10%;
 }
 .our-Values h3 {
     font-family: 'Figtree', sans-serif;
