--- a/src/components/Nosotros/Nosotros.css
+++ b/src/components/Nosotros/Nosotros.css
@@ -4,7 +4,7 @@
     margin: 0 10%;
     position: relative;
 }
-.container-nosotros div {
+.cards-nosotros {
     bottom: 0%;
     background: linear-gradient(180deg, rgba(250, 250, 250, 0.36) 11.46%, rgba(171, 227, 196, 0.31) 36.98%, rgba(255, 207, 176, 0.31) 66.15%, rgba(250, 250, 250, 0.37) 98.03%);
 }.container-nosotros h2 {
@@ -22,13 +22,14 @@
     gap: 10px;
 }
 .cards-1 h2 {
-    margin: 20px 0;
+    text-align: center;
+    margin: 20px auto;
 }
 .cards-1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 40px 60px 40px;
+    padding: 0 40px 0 40px;
     background: #FAFAFA;
     border-radius: 20px;
     width: 530px;
@@ -60,6 +61,20 @@
     line-height: 28px;
     letter-spacing: 0.02em;
     color: #333333;
+}
+.daiana-description {
+    padding: 20px 0;
+    height: 60%;
+}
+.daiana-img {
+    height: 40%;
+}
+.nico-description {
+    padding: 20px 0;
+    height: 60%;
+}
+.nico-img {
+    height: 40%;
 }
 @media only screen and (max-width: 1100px) {
     .container-nosotros {
