--- a/src/components/Nosotros/Nosotros.css
+++ b/src/components/Nosotros/Nosotros.css
@@ -7,7 +7,8 @@
 .cards-nosotros {
     bottom: 0%;
     background: linear-gradient(180deg, rgba(250, 250, 250, 0.36) 11.46%, rgba(171, 227, 196, 0.31) 36.98%, rgba(255, 207, 176, 0.31) 66.15%, rgba(250, 250, 250, 0.37) 98.03%);
-}.container-nosotros h2 {
+}
+.container-nosotros h2 {
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
@@ -26,6 +27,7 @@
     margin: 20px auto;
 }
 .cards-1 {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,6 +79,10 @@
     height: 40%;
 }
 @media only screen and (max-width: 1100px) {
+    .cards-nosotros {
+        bottom: 0%;
+        background: inherit;
+    }
     .container-nosotros {
         min-height: 100vh;
         padding: 100px 0;
@@ -93,11 +99,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 0 40px 60px 40px;
+        padding: 0 0 60px 0;
         background: #FAFAFA;
         border-radius: 20px;
         width: 100%;
         min-height: 727px;
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        filter: none;
     }
 }
