--- a/src/components/Solutions/Solutions.css
+++ b/src/components/Solutions/Solutions.css
@@ -57,7 +57,7 @@
     background: linear-gradient(180deg, #EAECF0 0%, rgba(234, 236, 240, 0) 100%);
     border-radius: 30px;
 }
-.article-2 button {
+.article-2 a {
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -75,7 +75,7 @@
 }
 @media only screen and (max-width: 1100px) {
     .container-solutions {
-        padding: 100px 50px;
+        padding: 100px 10px;
     }
     .container-article {
         gap: 20px;
@@ -83,6 +83,9 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+    }
+    .container-solutions h2 {
+        text-align: center;
     }
     .article-1 {
         width: 100%;
